# hs-back

./: .gitignore  CHANGELOG.md  LICENSE  README.md  back.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs
src/Routes/: Card.hs  Cart.hs  Customers.hs  Payment.hs  Products.hs
src/Services/: Cart.hs  Routes.hs  State.hs  Validation.hs
src/Types/: Card.hs  Cart.hs  Customer.hs  Payment.hs  Product.hs  Requests.hs
