cabal-version:   3.0
name:            back
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          JavierDzul
maintainer:      davidpech131@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable back
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, scotty, aeson, text, containers, stm, uuid, wai-cors, http-types
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules:    Services.Cart, Services.State, Services.Validation,Services.Routes ,Types.Cart, Types.Card, Types.Customer, Types.Product, Types.Requests, Types.Payment, Routes.Card, Routes.Cart, Routes.Customers, Routes.Products, Routes.Payment
  
    
